fix .justify-stretch

--- a/ui/src/components/button/Button.scss
+++ b/ui/src/components/button/Button.scss
@@ -24,3 +24,11 @@
     margin-left: 0.5em;
   }
 }
+
+.row.justify-stretch {
+  .ns-button {
+    + .ns-button {
+      margin-left: 0;
+    }
+  }
+}
