--- a/ui/src/styles/core/flex.scss
+++ b/ui/src/styles/core/flex.scss
@@ -70,6 +70,10 @@
 }
 .justify-stretch {
   justify-content: stretch;
+  >div, >.div, >view, >button {
+    flex-grow: 1;
+    margin: 0; // 消除多个连续 <ns-buton> 之间的空隙
+  }
 }
 
 /* cross axis */
